[package]
name = "pumpfun-copy"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
solana-client = "1.16"
solana-sdk = "1.16"
solana-program = "1.16"
solana-account-decoder = "1.16"
solana-transaction-status = "1.16"
spl-token = "4.0"
spl-associated-token-account = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
dotenvy = "0.15"
bs58 = "0.5"
borsh = { version = "1.5", features = ["derive"] }
borsh-derive = "1.5"
base64 = "0.21"
anchor-client = "0.30.1"
anchor-spl = "0.30.1"
pumpfun = { version = "3.0.1", features = ["client"] }
